--- a/style.css
+++ b/style.css
@@ -75,7 +75,16 @@ h1 {
   color: #888;
 }
 
-button {
+.screen_inp_wrap {
+  text-align: right;
+}
+
+input {
+  margin: 2px;
+}
+
+button,
+input {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
