--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    /* color-scheme: light dark; */
+    /* color: rgba(255, 255, 255, 0.87); */
+    /* background-color: #242424; */
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -97,10 +97,6 @@ input {
     margin-bottom: 3px;
 }
 
-button:hover {
-    border-color: #646cff;
-}
-
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
@@ -111,11 +107,7 @@ button.isScreen::before {
 }
 
 button.following {
-    background-color: green;
-}
-
-button.not_following, button.red {
-    background-color: red;
+    background-color: rgb(0, 80, 0);
 }
 
 div#leftbar {
@@ -150,7 +142,7 @@ hr {
     width: 143px;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
     :root {
         color: #213547;
         background-color: #ffffff;
@@ -169,4 +161,94 @@ hr {
         font-size: 21px;
         color: black;
     }
+} */
+
+/* UPDATED STYLING */
+body::-webkit-scrollbar {
+    background-color: transparent;
+    border-radius: 100px;
+}
+
+html {
+    color: rgb(255, 255, 255);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 16px;
+    background-color: rgba(30, 34, 49, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+    backdrop-filter: blur(10px);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+    overflow: scroll;
+}
+
+input {
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    position: relative;
+    min-width: 40px;
+    width: -webkit-fill-available;
+    color: rgb(255, 255, 255);
+    border-radius: 16px;
+    background-color: transparent;
+    text-align: left;
+    margin: 0px;
+    border-style: solid;
+    border-width: 1px;
+    overflow: hidden;
+    min-width: 0%;
+    border-color: rgba(255, 255, 255, 0.23);
+}
+
+button {
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    position: relative;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    background-color: transparent;
+    outline: 0px;
+    margin: 0px;
+    cursor: pointer;
+    user-select: none;
+    vertical-align: middle;
+    appearance: none;
+    text-decoration: none;
+    font-family: Roboto, Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
+    letter-spacing: 0.02857em;
+    text-transform: uppercase;
+    min-width: 64px;
+    padding: 5px 15px;
+    border-radius: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border: 1px solid rgba(187, 153, 255, 0.5);
+    color: rgb(187, 153, 255);
+    width: 100%;
+    margin-bottom: 3px;
+
+}
+
+button:hover {
+    text-decoration: none;
+    background-color: rgba(187, 153, 255, 0.08);
+    border: 1px solid rgb(187, 153, 255);
+}
+
+button.not_following, button.red {
+    background-color: rgb(175 0 0);
+    color: rgb(255,255,255);
+    border: 1px rgb(175 0 0) solid;
+}
+
+button.not_following:hover, button.red:hover {
+    background-color: rgb(175 0 0);
+    color: rgb(255, 175, 175);
+    border: 1px rgb(255,255,255) solid;
 }
