--- a/style.css
+++ b/style.css
@@ -164,9 +164,30 @@ hr {
 } */
 
 /* UPDATED STYLING */
-body::-webkit-scrollbar {
-    background-color: transparent;
-    border-radius: 100px;
+::-webkit-scrollbar {
+    background: transparent;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 16px;
+    background-color: rgba(30, 34, 49, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+    backdrop-filter: blur(10px);
+    background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(187, 153, 255, 0.5);
 }
 
 html {
@@ -177,7 +198,7 @@ html {
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
     backdrop-filter: blur(10px);
     background-image: linear-gradient(rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 input {
