--- a/style.css
+++ b/style.css
@@ -253,7 +253,6 @@ button {
     color: rgb(187, 153, 255);
     width: 100%;
     margin-bottom: 3px;
-
 }
 
 button:hover {
@@ -262,10 +261,32 @@ button:hover {
     border: 1px solid rgb(187, 153, 255);
 }
 
-button.not_following, button.red {
-    background-color: rgb(175 0 0);
+button.dimmedBtn {
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    color: rgba(255, 255, 255, 0.25);
+}
+
+button.dimmedBtn:hover {
+    border: 1px solid rgba(255, 255, 255, 0.75);
+    color: rgba(255, 255, 255, 0.75);
+}
+
+button.following {
+    background-color: rgb(0, 175, 0);
     color: rgb(255,255,255);
-    border: 1px rgb(175 0 0) solid;
+    border: 1px rgb(0, 175, 0) solid;
+}
+
+button.following:hover {
+    background-color: rgb(0, 175, 0);
+    color: rgb(175, 255, 175);
+    border: 1px rgb(255,255,255) solid;
+}
+
+button.not_following, button.red {
+    background-color: rgb(175, 0, 0);
+    color: rgb(255,255,255);
+    border: 1px rgb(175, 0, 0) solid;
 }
 
 button.not_following:hover, button.red:hover {
